--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "selenium-webdriver": "^4.15.0",
     "socket.io": "^4.7.2",
     "sweetalert2": "^11.9.0",
-    "xss": "^1.0.14"
+    "xss": "^1.0.14",
+    "mongodb-memory-server": "9.0.1",
   },
   "devDependencies": {
     "jest": "^29.7.0",
