--- a/package.json
+++ b/package.json
@@ -44,11 +44,10 @@
     "socket.io": "^4.7.2",
     "sweetalert2": "^11.9.0",
     "xss": "^1.0.14",
-    "mongodb-memory-server": "9.0.1",
+    "mongodb-memory-server": "^9.0.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "mongodb-memory-server": "^9.0.1",
     "supertest": "^6.3.3"
   }
 }
