--- a/config/settings.json
+++ b/config/settings.json
@@ -1,6 +1,6 @@
 {
   "mongoConfig": {
-    "serverUrl": "https://us-east-1.aws.data.mongodb-api.com/app/data-joist/endpoint/data/v1",
+    "serverUrl": "mongodb+srv://admin:ssw555@harmony.hnh6zan.mongodb.net/",
     "database": "harmony"
   }
 }
