--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Where healing meets helping hand !!",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon",
     "seed": "node tasks/seed.js",
     "test": "jest"
   },
@@ -27,21 +27,27 @@
   },
   "homepage": "https://github.com/vaishvik24/CS555---B---TopGuns#readme",
   "dependencies": {
+    "assert": "^2.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "handlebars-helpers": "^0.10.0",
     "moment": "^2.29.4",
     "mongodb": "^4.12.1",
     "mongoose": "^7.6.3",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
+    "selenium-webdriver": "^4.15.0",
+    "socket.io": "^4.7.2",
+    "sweetalert2": "^11.9.0",
     "xss": "^1.0.14"
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "mongodb-memory-server": "^9.0.1",
+  
     "supertest": "^6.3.3"
   }
 }
